<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context=".HomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:text="@string/home_title"/>

    <RadioGroup
        android:id="@+id/difficulty_group"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <RadioButton
            android:id="@+id/easy_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/easy"/>

        <RadioButton
            android:id="@+id/medium_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"/>

        <RadioButton
            android:id="@+id/hard_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard"/>

    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:background="@drawable/round_button"
            android:text="@string/money"
            android:onClick="getMoney"/>

        <Button
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:background="@drawable/round_button"
            android:text="@string/math"
            android:onClick="getMath"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:background="@drawable/round_button"
            android:text="@string/clock"
            android:onClick="getClock"/>

        <Button
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:background="@drawable/round_button"
            android:text="@string/spelling"
            android:onClick="getSpelling"/>

    </LinearLayout>

</LinearLayout>
