<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.example.joaquin.charliesapp.SpellActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:text="@string/spell_title"
        android:paddingBottom="100dp"/>

    <TextView
        android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="50dp"
        android:textColor="@color/black"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

    <EditText
        android:id="@+id/spell_text"
        android:inputType="textNoSuggestions|textVisiblePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/spell_hint"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

    <Button
        android:id="@+id/spell_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit_spell_text"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:paddingTop="40dp"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/spell_prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev"/>

        <TextView
            android:id="@+id/below_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/submit_spell_answer"/>

        <Button
            android:id="@+id/spell_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"/>

    </LinearLayout>

    <TextView
        android:id="@+id/spell_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:textColor="@color/black"/>

</LinearLayout>
