<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.example.joaquin.charliesapp.ClockActivity">

    <ImageView
        android:id="@+id/clock_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/clock_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textColor="@color/black"
        android:textSize="20dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/clock_text"
            android:inputType="time"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/clock_hint"/>

        <Button
            android:id="@+id/submit_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_clock_text"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/clock_prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev"/>

        <TextView
            android:id="@+id/below_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/submit_clock_answer"/>

        <Button
            android:id="@+id/clock_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"/>

    </LinearLayout>

    <TextView
        android:id="@+id/clock_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:textColor="@color/black"/>

</LinearLayout>
